Ignore desktop.ini

--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,8 @@ slprj/
 # OS Type files
 ###############################################################################
 
+desktop.ini
+
 .DS_STORE
 
 Icon?
